# MedicaLLM

./: .env.example  .gitignore  AGENT_IMPROVEMENTS.md  COMPREHENSIVE_LOGGING_ADDED.md  DEBUGGING_LOGS_ADDED.md  DEPLOYMENT.md  EXAMPLE_LOG_OUTPUT.md  FIXES_APPLIED.md  FRONTEND_API_UPDATES.md  LOGGING_IMPLEMENTATION_SUMMARY.md  LOGGING_SETUP_COMPLETE.md  MIGRATION_SUMMARY.md  PharmAi D2.md  README.md  README_EUTIL.md  README_PUBMED.md  ROUTER_PREFIX_CHANGES.md  TODO.md  TODO_BACKEND_ENDPOINTS.md  Untitled-1.md  compose.yml  docker-compose.yml  implementation_plan.md  previous conv with ai.md  previous file structure.md  prompt_test_report.md  question.md  report conclusion.md  report instructions.md  report.md
AgentAPI/: main.py  pyproject.toml
AgentAPI/langchain/: README.md  chat_test.py  main.py  pdf_loader.py  quick_example.py  test_system.py  vector_store.py
agent-api/: .dockerignore  .gitignore  Dockerfile  README.md  _main.py  _test_langchain.py  api_server.py  check_warfarin.py  dynamodb_manager.py  entrypoint.sh  gradio_ui.py  main.py  medical_agent.py  models.py  pdf_processor.py  printmeup.py  pyproject.toml  session.py  setup_database.py  test_agent.py  test_drugs.py  vector_store.py  vector_store_manager.py
agent-api/_arda/: agent.py  chat_test.py  main.py
agent-api/_dogukan/: docker-compose.dev.yml
agent-api/_dogukan/frontend/: ENV_SETUP.md  SECRETS_MANAGEMENT.md  middleware.ts  package-lock.json
agent-api/_dogukan/medical-frontend/: DYNAMODB_SETUP.md  env.example.txt  package.json
agent-api/dogukan/: MICROSERVICES_ARCHITECTURE.md  README_MICROSERVICES.md  docker-compose.yml
agent-api/dogukan/medicallm-backend/: Dockerfile  README.md  package.json
agent-api/dogukan/medicallm-frontend/: auth.ts
agent-api/langchain/: agent.py  chat_test.py  main.py  pdf_loader.py  rag_chain.py  real_agent.py  test_system.py  vector_store.py
agent-api/scripts/: docker-compose.yml  setup_database.py
agent-api/src/: _chat_test.py  _invoke_ollama.py  api_server.py  gradio_ui.py  langchain_agent.py  main.py  medica_agent.py  pdf_processor.py  printmeup.py  rag_chain.py  vector_store.py  xml_processor.py
backend/: .dockerignore  .gitignore  Dockerfile  README.md  _search_parol.py  docker-compose.yml  package-lock.json  pyproject.toml  run.py  test_agent_tools.py  test_colored_logging.py  test_do_ai.py  test_embeddings.py  test_markdown_fixer.py  test_streaming.py
backend/drugbank_schema/: drugbank.py
backend/scripts/: generate_drug_embeddings.py  init_tables.py  seed_drugbank.py
backend/src/: colored_logging.py  config.py  index.ts  main.py
backend/src/admin/: router.py  service.py
backend/src/agent/: agent.py  langchain_agent.py  markdown_fixer.py  router.py  session.py  session_manager.py  source_tracker.py  tools.py
backend/src/auth/: dependecies.py  dependencies.py  models.py  router.py  service.py
backend/src/conversations/: models.py  router.py  service.py
backend/src/db/: client.py  dynamodb.ts  init.ts  init_tables.py  seed_drugbank.py  seed_drugbank_sql.py  setup.ts  setupUsers.ts  sql_client.py  sql_models.py  tables.py
backend/src/drugbank_schema/: __init__.py
backend/src/drugs/: calculate_severity.py  embedding_service.py  models.py  router.py  service.py
backend/src/embedding/: vector_store.py
backend/src/middleware/: auth.ts  rate_limiter.py
backend/src/patients/: models.py  (+2 more)
(+155 files in other folders)
