[project]
name = "agentapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.119.1",
    "icecream>=2.1.8",
    "langchain>=1.0.2",
    "langchain-openai>=1.0.1",
    "uvicorn>=0.38.0",
]
