[project]
name = "agentapi"
version = "0.1.0"
description = "MedicaLLM - Medical AI Assistant with RAG and Drug Database"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.0",
    "dotenv>=0.9.9",
    "einops>=0.8.1",
    "fastapi>=0.119.1",
    "gradio>=5.49.1",
    "icecream>=2.1.8",
    "langchain>=1.0.2",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.5",
    "langchain-huggingface>=1.0.1",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.1",
    "pydantic>=2.0.0",
    "pympler>=1.1",
    "pypdf>=6.3.0",
    "sentence-transformers>=5.1.2",
    "typer>=0.20.0",
    "uvicorn[standard]>=0.38.0",
    "websockets>=15.0.1",
    "xsdata[cli,lxml]>=25.7",
]
